--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 { 
   "token"  : "NDYyMzM0OTUzNDgxMzA2MTEy.DhgrpQ.Lxr98dRhpG1tzOlKuai7pPT8EIc",
-  "prefix" : "+"
+  "prefix" : "+",
   "threshold" : 3000
 }
